[project]
name = "custom_csa"
authors = [
    { name = "anton15898@gmail.com", email = "antony15898@gmail.com"}
]
description = "From Farm to Table: Discover the Freshest Rice & Products with CSA."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
